--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
 
 <header>
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="dasresume.pdf">Resume</a></li>
-      <li><a href="connect.html">Connect</a></li>
+    <ul class="nav_links">
+      <li class="nav_item"><a href="index.html">Home</a></li>
+      <li class="nav_item"><a href="about.html">About Me</a></li>
+      <li class="nav_item"><a href="portfolio.html">Portfolio</a></li>
+      <li class="nav_item"><a href="dasresume.pdf">Resume</a></li>
+      <li class="nav_item"><a href="connect.html">Connect</a></li>
     </ul>
   </nav>
   <div>
