--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="imgs/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <title>Home</title>
   </head>
 <body>
@@ -20,9 +21,6 @@
       <li class="nav_item"><a href="connect.html">Connect</a></li>
     </ul>
   </nav>
-  <div>
-    <h1>Colleen van Lent</h1>
-  </div>
 </header>
 
 <main>
