--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <li class="nav_item"><a href="connect.html">Connect</a></li>
     </ul>
   </nav>
+  <div>
+    <h1>Amrita R. Das</h1>
+  </div>
 </header>
 
 <main>
