--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <h1>Amrita R. Das</h1>
   </div>
   <nav>
-    <ul class="topnav">
-      <li class="nav_item"><a href="index.html">Home</a></li>
-      <li class="nav_item"><a href="about.html">About Me</a></li>
-      <li class="nav_item"><a href="portfolio.html">Portfolio</a></li>
-      <li class="nav_item"><a href="dasresume.pdf">Resume</a></li>
-      <li class="nav_item"><a href="connect.html">Connect</a></li>
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="dasresume.pdf">Resume</a></li>
+      <li><a href="connect.html">Connect</a></li>
         </ul>
   </nav>
 </header>
