--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Amrita R. Das</h1>
   </div>
   <nav>
-    <ul class="nav">
+    <ul id="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Me</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
