--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <title>Home</title>
   </head>
 <body>
-
+  <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <header>
   <div id="myname">
     <h1>Amrita R. Das</h1>
   </div>
   <nav>
-    <ul id="nav">
-      <li><a href="index.html">Home</a></li>
+    <ul class="nav">
+      <li><a class="current" href="index.html">Home</a></li>
       <li><a href="about.html">About Me</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="portfolio.html">Photography</a></li>
       <li><a href="dasresume.pdf">Resume</a></li>
       <li><a href="connect.html">Connect</a></li>
         </ul>
@@ -28,12 +28,14 @@
 </header>
 
 <main>
-	<p>I am a Lecturer IV in the School of Information at the University of Michigan. I focus on the introductory programming courses such as Data-Oriented Programming (SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
-	<p>My previous jobs include Associate Professor at <a href="https://www.csulb.edu/">California State University</a> and positions at NASA JPL, the Naval Research Lab, and the NSA. I received my BS from <a href="https://www.kent.edu/">Kent State University</a> Honors College in Computer Science, and an MS and PhD from the University of Pittsburgh, also in Computer Science. My thesis was on Artificial Intelligence applications on the Nursebot Project, a robotic assistant for the elderly.</p>
+  <div class="mainsection">
+    <div class="mainsection-item"><img src="images/personal.jpg" alt="Sample photo"></div>
+	  <div class="mainsection-item"><p>I am here to say I am the first college-educated person in my family for generations, and that’s because I’ve had the opportunity to become so and I took it. This means everything to me – privilege, opportunity, pride, strength, but also hardship, loneliness, confusion, and obstacles. But with the support of my friends, mentors, faculty, and staff, my journey of being a first-generation college student at the University of Michigan was truly phenomenal. I discovered my passion of serving low-income communities through the different positions I’ve worked. I grew my leadership potential by joining and then later leading student organizations. I have participated in and organized teach-ins, workshops, dialogues, full conferences, and executed both short and day-long events. And I also love memes!! Check out the Photography tab in the navigation!</p></div>
+  </div>
 </main>
 
 <footer>
-  <p>Colleen van Lent &copy; 2020</p>
+  <p>Amrita R. Das &copy; 2020</p>
 </footer>
 
 </body>
