--- a/about.html
+++ b/about.html
@@ -6,32 +6,42 @@
     <link rel="icon" href="imgs/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>About</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <title>Home</title>
   </head>
 <body>
-
+  <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <header>
-  <nav>
-    <ul class="nav_links">
-      <li class="nav_item"><a href="index.html">Home</a></li>
-      <li class="nav_item"><a href="about.html">About Me</a></li>
-      <li class="nav_item"><a href="portfolio.html">Portfolio</a></li>
-      <li class="nav_item"><a href="dasresume.pdf">Resume</a></li>
-      <li class="nav_item"><a href="connect.html">Connect</a></li>
-    </ul>
-  </nav>
-  <div>
-    <h1>Colleen van Lent</h1>
+  <div id="myname">
+    <h1>Amrita R. Das</h1>
   </div>
+  <nav>
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a class="current" href="about.html">About Me</a></li>
+      <li><a href="portfolio.html">Photography</a></li>
+      <li><a href="dasresume.pdf">Resume</a></li>
+      <li><a href="connect.html">Connect</a></li>
+        </ul>
+  </nav>
 </header>
 
 <main>
-	<p>I am a Lecturer IV in the School of Information at the University of Michigan. I focus on the introductory programming courses such as Data-Oriented Programming (SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
-	<p>My previous jobs include Associate Professor at <a href="https://www.csulb.edu/">California State University</a> and positions at NASA JPL, the Naval Research Lab, and the NSA. I received my BS from <a href="https://www.kent.edu/">Kent State University</a> Honors College in Computer Science, and an MS and PhD from the University of Pittsburgh, also in Computer Science. My thesis was on Artificial Intelligence applications on the Nursebot Project, a robotic assistant for the elderly.</p>
+    <div class="container">
+      <div class="grid-item" id="description1"><p>Who am I? I'm the greatest and cutest person you've ever met. I have a charismatic personality. I've accepted my very sad humour as a coping mechanism. And I love cooking and ESPECIALLY eating. If there's anyone I'd like to meet and be friends with, it'd be Obama for sure. I think I could out-hoop him.</p></div>
+      <div class="grid-item"><img src="images/about1.jpg" alt="Sample photo"></div>
+      <div class="grid-item"><img src="images/about2.JPEG" alt="Sample photo"></div>
+      <div class="grid-item" id="description2"><p>This is my family. They're alright - just like any other family - but just a tad cooler. They feed me until I strictly gain 20 pounds every time I come home. They believe in me even though they don't understand why I'm still in school. And they desperately hope I have a baby within the next two years with a very rich man.</p></div>
+      <div class="grid-item" id="description1"><p>This is not my cat actually, but I love him nonetheless. His name is Fulano and he enjoys attacking me while sumultaneously cuddling me. So adorable he is *heart emoji* like a little lion.</p></div>
+      <div class="grid-item"><img src="images/about3.jpg" alt="Sample photo"></div>
+      <div class="grid-item"><img src="images/about4.jpg" alt="Sample photo"></div>
+      <div class="grid-item" id="description2"><p>I was going to say these are some stray dogs I found in the street and took in as my own but no they're just my best friends whom I haven't seen in a while because 'rona. Miss them so much!</p></div>
+    </div>
 </main>
 
 <footer>
-  <p>Colleen van Lent &copy; 2020</p>
+  <p>Amrita R. Das &copy; 2020</p>
 </footer>
 
 </body>
