--- a/connect.html
+++ b/connect.html
@@ -6,32 +6,33 @@
     <link rel="icon" href="imgs/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Connect</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <title>Home</title>
   </head>
 <body>
-
+  <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <header>
-  <nav>
-    <ul class="nav_links">
-      <li class="nav_item"><a href="index.html">Home</a></li>
-      <li class="nav_item"><a href="about.html">About Me</a></li>
-      <li class="nav_item"><a href="portfolio.html">Portfolio</a></li>
-      <li class="nav_item"><a href="dasresume.pdf">Resume</a></li>
-      <li class="nav_item"><a href="connect.html">Connect</a></li>
-    </ul>
-  </nav>
-  <div>
-    <h1>Colleen van Lent</h1>
+  <div id="myname">
+    <h1>Amrita R. Das</h1>
   </div>
+  <nav>
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="portfolio.html">Photography</a></li>
+      <li><a href="dasresume.pdf">Resume</a></li>
+      <li><a class="current" href="connect.html">Connect</a></li>
+        </ul>
+  </nav>
 </header>
 
 <main>
-	<p>I am a Lecturer IV in the School of Information at the University of Michigan. I focus on the introductory programming courses such as Data-Oriented Programming (SI 206) and the Web Design Courses (SI 339 and SI 539).</p>
-	<p>My previous jobs include Associate Professor at <a href="https://www.csulb.edu/">California State University</a> and positions at NASA JPL, the Naval Research Lab, and the NSA. I received my BS from <a href="https://www.kent.edu/">Kent State University</a> Honors College in Computer Science, and an MS and PhD from the University of Pittsburgh, also in Computer Science. My thesis was on Artificial Intelligence applications on the Nursebot Project, a robotic assistant for the elderly.</p>
+  <div class="contactinfo"><p>Amrita Das<br>amrdas@umich.edu</p></div>
 </main>
 
 <footer>
-  <p>Colleen van Lent &copy; 2020</p>
+  <p>Amrita R. Das &copy; 2020</p>
 </footer>
 
 </body>
