--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <div class="grid-item" id="description2"><p>This is my family. They're alright - just like any other family - but just a tad cooler. They feed me until I strictly gain 20 pounds every time I come home. They believe in me even though they don't understand why I'm still in school. And they desperately hope I have a baby within the next two years with a very rich man.</p></div>
       <div class="grid-item" id="description1"><p>This is not my cat actually, but I love him nonetheless. His name is Fulano and he enjoys attacking me while sumultaneously cuddling me. So adorable he is *heart emoji* like a little lion.</p></div>
       <div class="grid-item"><img src="images/about3.jpg" alt="Sample photo"></div>
-      <div class="grid-item"><img src="images/about4.jpg" alt="Sample photo"></div>
+      <div class="grid-item"><img src="images/about4.JPG" alt="Sample photo"></div>
       <div class="grid-item" id="description2"><p>I was going to say these are some stray dogs I found in the street and took in as my own but no they're just my best friends whom I haven't seen in a while because 'rona. Miss them so much!</p></div>
     </div>
 </main>
