--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   <nav>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
-      <li><a class="current" href="about.html">About Me</a></li>
+      <li><a class="current" href="about.html">About</a></li>
       <li><a href="portfolio.html">Photography</a></li>
       <li><a href="dasresume.pdf">Resume</a></li>
       <li><a href="connect.html">Connect</a></li>
