--- a/connect.html
+++ b/connect.html
@@ -20,30 +20,15 @@
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a class="current" href="portfolio.html">Photography</a></li>
+      <li><a href="portfolio.html">Photography</a></li>
       <li><a href="dasresume.pdf">Resume</a></li>
-      <li><a href="connect.html">Connect</a></li>
+      <li><a class="current" href="connect.html">Connect</a></li>
         </ul>
   </nav>
 </header>
 
 <main>
-  <section class=photos>
-    <div class="phototext"><p>This isn't photography but they're still images of my favorite reaction memes. Please do enjoy them.</p></div>
-    <div class="gallery">
-      <div class="gallery-item"><img src="images/photo0.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo1.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo2.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo3.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo4.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo5.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo6.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo7.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo8.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo9.jpg" alt="Sample photo"></div>
-    </div>
-    <div class="phototext"><p>If you love SpongeBob, you're welcome!</p></div>
-  </section>
+  <div class="contactinfo"><p>Amrita Das<br>amrdas@umich.edu</p></div>
 </main>
 
 <footer>
