--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   </nav>
 </header>
 
-<main>
+<main id="main">
     <div class="container">
       <div class="grid-item" id="description1"><p>Who am I? I'm the greatest and cutest person you've ever met. I have a charismatic personality. I've accepted my very sad humour as a coping mechanism. And I love cooking and ESPECIALLY eating. If there's anyone I'd like to meet and be friends with, it'd be Obama for sure. I think I could out-hoop him.</p></div>
       <div class="grid-item"><img src="images/about1.jpg" alt="Sample photo"></div>
