--- a/connect.html
+++ b/connect.html
@@ -27,7 +27,7 @@
   </nav>
 </header>
 
-<main>
+<main id="main">
   <div class="contactinfo"><p>Amrita Das<br>amrdas@umich.edu</p></div>
 </main>
 
