--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </nav>
 </header>
 
-<main>
+<main id="main">
   <div class="mainsection">
     <div class="mainsection-item"><img src="images/personal.jpg" alt="Sample photo"></div>
 	  <div class="mainsection-item"><p>I am here to say I am the first college-educated person in my family for generations, and that’s because I’ve had the opportunity to become so and I took it. This means everything to me – privilege, opportunity, pride, strength, but also hardship, loneliness, confusion, and obstacles. But with the support of my friends, mentors, faculty, and staff, my journey of being a first-generation college student at the University of Michigan was truly phenomenal. I discovered my passion of serving low-income communities through the different positions I’ve worked. I grew my leadership potential by joining and then later leading student organizations. I have participated in and organized teach-ins, workshops, dialogues, full conferences, and executed both short and day-long events. And I also love memes!! Check out the Photography tab in the navigation!</p></div>
