--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
   </nav>
 </header>
 
-<main>
+<main id="main">
   <section class=photos>
     <div class="phototext"><p>This isn't photography but they're still images of my favorite reaction memes. Please do enjoy them.</p></div>
     <div class="gallery">
