--- a/about.html
+++ b/about.html
@@ -8,20 +8,21 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="images/wings.png"/>
     <title>Home</title>
   </head>
 <body>
   <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <header>
   <div id="myname">
-    <h1>Amrita R. Das</h1>
+    <h1>Louie the Corgi</h1>
   </div>
   <nav>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a class="current" href="about.html">About</a></li>
-      <li><a href="portfolio.html">Photography</a></li>
-      <li><a href="dasresume.pdf">Resume</a></li>
+      <li><a href="portfolio.html">Photos</a></li>
+      <li><a href="resume.html">Resume</a></li>
       <li><a href="connect.html">Connect</a></li>
         </ul>
   </nav>
@@ -29,14 +30,14 @@
 
 <main id="main">
     <div class="container">
-      <div class="grid-item" id="description1"><p>Who am I? I'm the greatest and cutest person you've ever met. I have a charismatic personality. I've accepted my very sad humour as a coping mechanism. And I love cooking and ESPECIALLY eating. If there's anyone I'd like to meet and be friends with, it'd be Obama for sure. I think I could out-hoop him.</p></div>
-      <div class="grid-item"><img src="images/about1.jpg" alt="Sample photo"></div>
-      <div class="grid-item"><img src="images/about2.JPEG" alt="Sample photo"></div>
-      <div class="grid-item" id="description2"><p>This is my family. They're alright - just like any other family - but just a tad cooler. They feed me until I strictly gain 20 pounds every time I come home. They believe in me even though they don't understand why I'm still in school. And they desperately hope I have a baby within the next two years with a very rich man.</p></div>
-      <div class="grid-item" id="description1"><p>This is not my cat actually, but I love him nonetheless. His name is Fulano and he enjoys attacking me while sumultaneously cuddling me. So adorable he is *heart emoji* like a little lion.</p></div>
+      <div class="grid-item" id="description1"><p>This is my favorite human in the whole wide world, my mom, Amrita (a human!!) and my best friend and cousin, Fulano the Cat. Fulano and I play every day! We wrestle and play tag. He lets me play with his toys sometimes and I let him play with mine. He thinks just because he's a week older that he can drink out of my doggy water bowl but I'll show him who's boss when I get big and strong!!</p></div>
+      <div class="grid-item"><img src="images/about1.JPG" alt="Sample photo"></div>
+      <div class="grid-item"><img src="images/about2.JPG" alt="Sample photo"></div>
+      <div class="grid-item" id="description2"><p>This is my whole family. They're alright - just like any other family - but just a tad cooler. They feed me a lot and believe in me and always take me on walks and play with me. From left to right is me, my Dad - Alan, my Mom - Amrita, Aunty Ashley, and my cousin Fulano. I love all of them so much!</p></div>
+      <div class="grid-item" id="description1"><p>I LOVE PLAYING OUTSIDE. It's my favorite place to be and my favorite thing to do. I love staring at different animals from far away. I love meeting new people and being petted. When I see another dog I get really exicted to meet a new friend. I like looking at the ducks and their families from far away too. And I love playing with the leaves. Fall is my favorite season thus far! I wish my cousin Fulano would play outside with me but he's a little scared. I told him he just needs time and sooner or later he'll be like those really big fat cats that I meet on my walks at night.</p></div>
       <div class="grid-item"><img src="images/about3.jpg" alt="Sample photo"></div>
-      <div class="grid-item"><img src="images/about4.JPG" alt="Sample photo"></div>
-      <div class="grid-item" id="description2"><p>I was going to say these are some stray dogs I found in the street and took in as my own but no they're just my best friends whom I haven't seen in a while because 'rona. Miss them so much!</p></div>
+      <div class="grid-item"><img src="images/about4.jpg" alt="Sample photo"></div>
+      <div class="grid-item" id="description2"><p>This is my dad. He takes care of me every day and I really love him. He always says I have a lot of learning to do because I sometimes make accidents in the house, but he loves me anyway. He gives me treats when I learn a new trick and when I've basically been a good boy. During Thanksgiving, I got to meet my other aunts and uncles and even my grandparents! It was fun. My dad said they spoiled me. Miss them so much!</p></div>
     </div>
 </main>
 
