--- a/index.html
+++ b/index.html
@@ -8,29 +8,32 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="images/wings.png"/>
     <title>Home</title>
   </head>
 <body>
   <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <header>
   <div id="myname">
-    <h1>Amrita R. Das</h1>
+    <h1>Louie the Corgi</h1>
   </div>
   <nav>
     <ul class="nav">
       <li><a class="current" href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="portfolio.html">Photography</a></li>
-      <li><a href="dasresume.pdf">Resume</a></li>
+      <li><a href="portfolio.html">Photos</a></li>
+      <li><a href="resume.html">Resume</a></li>
       <li><a href="connect.html">Connect</a></li>
         </ul>
   </nav>
 </header>
 
-<main id="main">
+<main id="main-index">
   <div class="mainsection">
+    <!-- <div class="anim"><img src="images/wings.png" alt="Sample photo" id="anim"></div> -->
     <div class="mainsection-item"><img src="images/personal.jpg" alt="Sample photo"></div>
 	  <div class="mainsection-item"><p>I am here to say I am the first college-educated person in my family for generations, and that’s because I’ve had the opportunity to become so and I took it. This means everything to me – privilege, opportunity, pride, strength, but also hardship, loneliness, confusion, and obstacles. But with the support of my friends, mentors, faculty, and staff, my journey of being a first-generation college student at the University of Michigan was truly phenomenal. I discovered my passion of serving low-income communities through the different positions I’ve worked. I grew my leadership potential by joining and then later leading student organizations. I have participated in and organized teach-ins, workshops, dialogues, full conferences, and executed both short and day-long events. And I also love memes!! Check out the Photography tab in the navigation!</p></div>
+    <div class="anim"><img src="images/wings.png" alt="Sample photo" id="anim"></div>
   </div>
 </main>
 
