--- a/portfolio.html
+++ b/portfolio.html
@@ -8,20 +8,21 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="images/wings.png"/>
     <title>Home</title>
   </head>
 <body>
   <div class="skip"><a href="#main">Skip to Main Content</a></div>
 <header>
   <div id="myname">
-    <h1>Amrita R. Das</h1>
+    <h1>Louie the Corgi</h1>
   </div>
   <nav>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a class="current" href="portfolio.html">Photography</a></li>
-      <li><a href="dasresume.pdf">Resume</a></li>
+      <li><a class="current" href="portfolio.html">Photos</a></li>
+      <li><a href="resume.html">Resume</a></li>
       <li><a href="connect.html">Connect</a></li>
         </ul>
   </nav>
@@ -29,11 +30,11 @@
 
 <main id="main">
   <section class=photos>
-    <div class="phototext"><p>This isn't photography but they're still images of my favorite reaction memes. Please do enjoy them.</p></div>
+    <div class="phototext"><p>Here are some more pictures of me. Aunty Amrita and Dad picked out all of them for me. They said these were some really cute ones they want everyone to see.</p></div>
     <div class="gallery">
       <div class="gallery-item"><img src="images/photo0.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo1.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo2.jpg" alt="Sample photo"></div>
+      <div class="gallery-item"><img src="images/photo1.JPG" alt="Sample photo"></div>
+      <div class="gallery-item"><img src="images/photo2.JPG" alt="Sample photo"></div>
       <div class="gallery-item"><img src="images/photo3.jpg" alt="Sample photo"></div>
       <div class="gallery-item"><img src="images/photo4.jpg" alt="Sample photo"></div>
       <div class="gallery-item"><img src="images/photo5.jpg" alt="Sample photo"></div>
@@ -42,7 +43,7 @@
       <div class="gallery-item"><img src="images/photo8.jpg" alt="Sample photo"></div>
       <div class="gallery-item"><img src="images/photo9.jpg" alt="Sample photo"></div>
     </div>
-    <div class="phototext"><p>If you love SpongeBob, you're welcome!</p></div>
+    <div class="phototext"><p>I hope you like them!</p></div>
   </section>
 </main>
 
