--- a/resume.html
+++ b/resume.html
@@ -28,25 +28,25 @@
   </nav>
 </header>
 
-<main id="main-resume" style=background-color:#c19434;>
+<main id="main-resume" style=background-color:#D9C5B4;>
   <br>
   <h4>As you may have guessed, based on the gifts I have recieved from the heavens above me,</h4>
   <br>
   <h4>I am on the lookout for current modeling positions.</h4>
   <br>
   <h3>Visit https://www.youtube.com/watch?v=qq531KU5fS4 and then send me an email at amrdas@umich.edu</h3>
-  <div style="height:25px;background-color:#c19434;text-align:center;font-size:20px;padding:10px;">BUT</div>
+  <div style="height:25px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;">BUT</div>
   <div class="parallax"></div>
-  <div style="height:25px;background-color:#c19434;text-align:center;font-size:20px;padding:10px;">WHY</div>
+  <div style="height:25px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;">WHY</div>
   <div class="parallax"></div>
-  <div style="height:30px;background-color:#c19434;text-align:center;font-size:25px;padding:10px;">*ME*</div>
+  <div style="height:30px;background-color:#D9C5B4;text-align:center;font-size:25px;padding:10px;">*ME*</div>
   <div class="parallax"></div>
-  <div style="height:35px;background-color:#c19434;text-align:center;font-size:30px;padding:10px;">MIGHT YOU ASK?</div>
+  <div style="height:35px;background-color:#D9C5B4;text-align:center;font-size:30px;padding:10px;">MIGHT YOU ASK?</div>
   <div class="parallax"></div>
-  <div style="height:20px;background-color:#c19434;text-align:center;font-size:20px;padding:10px;"><a href="https://www.youtube.com/watch?v=qq531KU5fS4">(Click this link to find out)</a></div>
+  <div style="height:20px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;"><a href="https://www.youtube.com/watch?v=qq531KU5fS4">(Click this link to find out)</a></div>
   <div class="parallax"></div>
-  <div style="height:50px;background-color:#c19434;text-align:center;font-size:30px;padding:10px;">If that worked, here's my card.</div>
-  <div class="flip-card">
+  <div style="height:50px;background-color:#D9C5B4;text-align:center;font-size:30px;padding:10px;">If that worked, here's my card.</div>
+  <div class="flip-card" tabindex="0">
     <div class="flip-card-inner">
       <div class="flip-card-front"><img src="images/photo4.jpg" alt="Louie the Dog wagging his tail in excitement" style="width:300px;height:300px;"></div>
       <div class="flip-card-back">
@@ -60,7 +60,7 @@
       </div>
     </div>
   </div>
-  <div style="height:20px;background-color:#c19434;text-align:center;font-size:20px;padding:10px;"><a href="connect.html">(Click here to connect with me)</a></div>
+  <div style="height:20px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;"><a href="connect.html">(Click here to connect with me)</a></div>
 </main>
 
 <footer>
