--- a/connect.html
+++ b/connect.html
@@ -33,12 +33,12 @@
   <h4>Connect with me! Fill out your contact information below.</h4>
 
 <div class="contactform">
-  <form action="mailto:amritads8@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm">
+  <form action="https://formspree.io/f/moqpknno" method="POST">
     <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your first name..">
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
     <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <input type="text" id="lname" name="lastname" placeholder="Your email..">
 
     <label for="country">Country</label>
     <select id="country" name="country">
