--- a/resume.html
+++ b/resume.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZHBYQKVC1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0N3GXNQM94"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-5ZHBYQKVC1');
+  gtag('config', 'G-0N3GXNQM94');
 </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
