--- a/resume.html
+++ b/resume.html
@@ -39,20 +39,20 @@
 
 <main id="main-resume" style=background-color:#D9C5B4;>
   <br>
-  <h4>As you may have guessed, based on the gifts I have recieved from the heavens above me,</h4>
+  <h4>As you may have guessed, based on the gifts I have recieved from the heavens above me, I am on the lookout for current modeling positions. I would prefer go international but domestic is fine too, as long as my mom and dad are with me.</h4>
   <br>
-  <h4>I am on the lookout for current modeling positions.</h4>
+  <h4>Some of my skills are looking good, being cute, wagging my tail, and sticking out my tongue. As long as you have the treats, I'm READY for a full day of work from 9-5 PM.</h4>
   <br>
   <h3>Visit https://www.youtube.com/watch?v=qq531KU5fS4 and then send me an email at amrdas@umich.edu</h3>
-  <div style="height:25px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;">BUT</div>
+  <div style="height:25px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;">If you're still not convinced..</div>
   <div class="parallax"></div>
-  <div style="height:25px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;">WHY</div>
+  <div style="height:25px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;">.. and would like to learn more..</div>
   <div class="parallax"></div>
-  <div style="height:30px;background-color:#D9C5B4;text-align:center;font-size:25px;padding:10px;">*ME*</div>
+  <div style="height:30px;background-color:#D9C5B4;text-align:center;font-size:25px;padding:10px;">about .. *ME*</div>
   <div class="parallax"></div>
-  <div style="height:35px;background-color:#D9C5B4;text-align:center;font-size:30px;padding:10px;">MIGHT YOU ASK?</div>
+  <div style="height:35px;background-color:#D9C5B4;text-align:center;font-size:30px;padding:10px;">I have a lot to say.</div>
   <div class="parallax"></div>
-  <div style="height:20px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;"><a href="https://www.youtube.com/watch?v=qq531KU5fS4">(Click this link to find out)</a></div>
+  <div style="height:20px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;"><a href="https://www.youtube.com/watch?v=qq531KU5fS4">(Click this link to be convinced.)</a></div>
   <div class="parallax"></div>
   <div style="height:50px;background-color:#D9C5B4;text-align:center;font-size:30px;padding:10px;">If that worked, here's my card.</div>
   <div class="flip-card" tabindex="0">
