--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
     <title>Home</title>
   </head>
 <body>
-  <div class="skip"><a href="#main">Skip to Main Content</a></div>
+  <div class="skip"><a href="#main-resume">Skip to Main Content</a></div>
 <header>
   <div id="myname">
     <h1>Louie the Corgi</h1>
