--- a/connect.html
+++ b/connect.html
@@ -50,7 +50,7 @@
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-    <label for="lname">Last Name</label>
+    <label for="lname">Email</label>
     <input type="text" id="lname" name="lastname" placeholder="Your email..">
 
     <label for="country">Country</label>
