--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
 
 <main id="main">
   <section class=photos>
-    <div class="phototext"><p>Here are some more pictures of me. Aunty Amrita and Dad picked out all of them for me. They said these were some really cute ones they want everyone to see.</p></div>
+    <div class="phototext"><p>Here are some more pictures of me. Mom and Dad picked out all of them for me. They said these were some really cute ones they want everyone to see.</p></div>
     <div class="gallery">
       <div class="gallery-item"><img src="images/photo0.jpg" alt="Sample photo"></div>
       <div class="gallery-item"><img src="images/photo1.JPG" alt="Sample photo"></div>
