--- a/resume.html
+++ b/resume.html
@@ -39,11 +39,10 @@
 
 <main id="main-resume" style=background-color:#D9C5B4;>
   <br>
-  <h3>As you may have guessed, based on the gifts I have recieved from the heavens above me, I am on the lookout for current modeling positions. I would prefer go international but domestic is fine too, as long as my mom and dad are with me.</h3>
+  <p>As you may have guessed, based on the gifts I have recieved from the heavens above me, I am on the lookout for current modeling positions. I would prefer go international but domestic is fine too, as long as my mom and dad are with me.</p>
   <br>
-  <h3>Some of my skills are looking good, being cute, wagging my tail, and sticking out my tongue. As long as you have the treats, I'm READY for a full day of work from 9-5 PM.</h3>
+  <p>Some of my skills are looking good, being cute, wagging my tail, and sticking out my tongue. As long as you have the treats, I'm READY for a full day of work from 9-5 PM.</p>
   <br>
-  <h2>Visit https://www.youtube.com/watch?v=qq531KU5fS4 and then send me an email at amrdas@umich.edu</h2>
   <div style="height:25px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;">If you're still not convinced..</div>
   <div class="parallax"></div>
   <div style="height:25px;background-color:#D9C5B4;text-align:center;font-size:20px;padding:10px;">.. and would like to learn more..</div>
