--- a/connect.html
+++ b/connect.html
@@ -39,11 +39,11 @@
 
 <main id="main">
   <br>
-  <h2>Connect with me! Fill out your contact information below. Photoshoot, job offer, playdate - contact me with the form below. I'll make sure to respond to your message!</h2>
+  <p>Connect with me! Fill out your contact information below. Photoshoot, job offer, playdate - contact me with the form below. I'll make sure to respond to your message!</p>
   <br>
-  <h2>It doesn't matter if you're human, cat, dog or mice - I'd love to play with you. I get really excited playing with new folks so I might play a little hard but don't you worry! I can't climb stairs or even jump on the couch so if you're a jumper, you can definitely get away from me if you need a break.</h2>
+  <p>It doesn't matter if you're human, cat, dog or mice - I'd love to play with you. I get really excited playing with new folks so I might play a little hard but don't you worry! I can't climb stairs or even jump on the couch so if you're a jumper, you can definitely get away from me if you need a break.</p>
   <br>
-  <h2>PS if you bring treats or a new toy, I might like you a million times more. Don't forget them!</h2>
+  <p>PS if you bring treats or a new toy, I might like you a million times more. Don't forget them!</p>
   <br>
 <div class="contactform">
   <form action="https://formspree.io/f/moqpknno" method="POST">
