--- a/portfolio.html
+++ b/portfolio.html
@@ -41,16 +41,16 @@
   <section class=photos>
     <div class="phototext"><p>Here are some more pictures of me. Mom and Dad picked out all of them for me. They said these were some really cute ones they want everyone to see.</p></div>
     <div class="gallery">
-      <div class="gallery-item"><img src="images/photo0.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo1.JPG" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo2.JPG" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo3.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo4.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo5.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo6.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo7.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo8.jpg" alt="Sample photo"></div>
-      <div class="gallery-item"><img src="images/photo9.jpg" alt="Sample photo"></div>
+      <div class="gallery-item"><img src="images/photo0.jpg" alt="Louie the Corgi looking up at the camera next to a leg."></div>
+      <div class="gallery-item"><img src="images/photo1.JPG" alt="Louie the Corgi at 1 month old visiting his Dad."></div>
+      <div class="gallery-item"><img src="images/photo2.JPG" alt="Louie and his cousin posing in front of Christmas tree."></div>
+      <div class="gallery-item"><img src="images/photo3.jpg" alt="Louie the Corgi taking a nap."></div>
+      <div class="gallery-item"><img src="images/photo4.jpg" alt="Louie the Corgi jumping at the screen to take a picture."></div>
+      <div class="gallery-item"><img src="images/photo5.jpg" alt="Louie the Corgi looking off into the distance after a walk."></div>
+      <div class="gallery-item"><img src="images/photo6.jpg" alt="Louie the Corgi with a confused face."></div>
+      <div class="gallery-item"><img src="images/photo7.jpg" alt="Louie the Corgi and Fulano the cat fighting."></div>
+      <div class="gallery-item"><img src="images/photo8.jpg" alt="Louie the Corgi and his Dad laying down on the ground on their backs."></div>
+      <div class="gallery-item"><img src="images/photo9.jpg" alt="Louie wearing his favorite Christmas sweater."></div>
     </div>
     <div class="phototext"><p>I hope you like them!</p></div>
   </section>
